[package]
name = "tevm"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = { version = "0.6.12" }
hex = "0.4.3"
lazy_static = "1.5.0"
libc = "0.2.155"
maplit = "1.0.2"
num-bigint = "0.4.6"
primitive-types = "0.12.2"
pyo3 = "0.22.0"
revm = { version = "10.0.0", features = ["hashbrown", "optional_no_base_fee", "serde", "serde-json"] }
ruint = "1.12.3"
serde = { version = "1.0.203", features = ["serde_derive", "derive"] }
serde_json = "1.0.120"
sha3 = "0.10.8"
simple_logger = "5.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
dotenv = "0.15.0"

[dev-dependencies]
criterion = {version="0.3.6", features=["html_reports"] }
