[package]
name = "tinyevm"
version = "1.0.0"
edition = "2021"

[lib]
name="tinyevm"
crate-type = ["cdylib", "rlib"]
path="src/lib.rs"

[dependencies]
eyre = { version = "0.6.12" }
hex = "0.4.3"
lazy_static = "1.5.0"
libc = "0.2.155"
maplit = "1.0.2"
num-bigint = "0.4.6"
primitive-types = "0.12.2"
pyo3 = { version = "0.22.0", features = ["extension-module", "num-bigint", "serde", "eyre"] }
revm = { version = "10.0.0", features = ["hashbrown", "optional_no_base_fee", "serde", "serde-json", "optional_eip3607", "optional_block_gas_limit"] }
ruint = "1.12.3"
serde = { version = "1.0.203", features = ["serde_derive", "derive"] }
serde_json = "1.0.120"
sha3 = "0.10.8"
simple_logger = "5.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
dotenv = "0.15.0"
thread_local = "1.1.8"
tokio = { version = "1.38.0", features = ["full"] }
strum_macros = "0.26.4"
hashbrown = "*"
redis = { version= "0.25.4", optional = true}
alloy = { version = "0.1.4", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4"] }
hex-literal = "0.4.1"

[dev-dependencies]
criterion = {version="0.3.6", features=["html_reports"] }

[features]
default = []
redis=["dep:redis"]

[[bench]]
name = "general"
harness = false

[[bench]]
name = "deploy"
harness = false

[[bench]]
name = "infinite_loop"
harness = false

[[bench]]
name = "function"
harness = false

[[bench]]
name = "conversion"
harness = false

[profile.bench]
debug = false
